// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow should render with border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="sc-bdfBwQ fPMXDH"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow should render without border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="sc-bdfBwQ fZKKsM"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;
